--- a/src/app/modules/passengers/passengers.component.html
+++ b/src/app/modules/passengers/passengers.component.html
@@ -1,41 +1,40 @@
-<table
-  mat-table
-  [dataSource]="passengersService.passengers"
-  matSort
->
-  <ng-container matColumnDef="Nom">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom</th>
-    <td mat-cell *matCellDef="let passenger">
-      <a [routerLink]="['./', passenger.PassengerId]">{{ passenger.Name }}</a>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="Sexe">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sexe</th>
-    <td mat-cell *matCellDef="let passenger">
-      {{ passenger.Sex }}
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="Âge">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Âge</th>
-    <td mat-cell *matCellDef="let passenger">
-      <ng-container *ngIf="passenger.Age; else unkownAge"
-        >{{ passenger.Age }} ans</ng-container
-      >
-      <ng-template #unkownAge>Âge inconnu</ng-template>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="Survivant">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Survivant
-    </th>
-    <td mat-cell *matCellDef="let passenger">
-      <ng-container *ngIf="passenger.Survived === '1'; else notSurvived"
-        >Oui</ng-container
-      >
-      <ng-template #notSurvived>Non</ng-template>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
+<div *ngIf="isInit">
+  <mat-form-field appearance="outline">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input />
+  </mat-form-field>
+
+  <div>
+    <mat-table [dataSource]="passengersTab" matSort matSortDisableClear>
+      <ng-container matColumnDef="Nom">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom</th>
+        <td mat-cell *matCellDef="let passenger">
+          <a [routerLink]="['./', passenger.PassengerId]">{{
+            passenger.Name
+          }}</a>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Sexe">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sexe</th>
+        <td mat-cell *matCellDef="let passenger">
+          {{ passenger.Sex }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Âge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Âge</th>
+        <td mat-cell *matCellDef="let passenger">
+          {{ passenger.Age ? passenger.Age : "Âge inconnu" }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Survivant">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Survivant</th>
+        <td mat-cell *matCellDef="let passenger">
+          {{ passenger.Survived === "1" ? "Oui" : "Non" }}
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
+  </div>
+</div>
