--- a/src/app/modules/passengers/passengers.component.html
+++ b/src/app/modules/passengers/passengers.component.html
@@ -1,9 +1,4 @@
-<div *ngIf="isInit">
-  <mat-form-field appearance="outline">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input />
-  </mat-form-field>
-
+<div *ngIf="passengersTab && passengersTab.data.length">
   <div>
     <mat-table [dataSource]="passengersTab" matSort matSortDisableClear>
       <ng-container matColumnDef="Nom">
@@ -35,6 +30,12 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
+    <mat-paginator
+      #paginator
+      [length]="passengersTab.data.length"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 25, 50]"
+      showFirstLastButtons
+    ></mat-paginator>
   </div>
 </div>
