--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,14 +5,15 @@
 
 header {
   /* padding: 7rem 0 0 0; */
-  
-  text-align: center;
-  
+  position: relative;
 }
 
 .relative {
-    height: 16rem;
-    position: relative;
+  height: 16rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .headimg {
@@ -41,12 +42,21 @@ header {
 }
 
 h1 {
-  font-size: 2.4rem;
-  font-weight: bold;
+  background-color: rgb(32, 32, 114);
+  font-family: "Zilla Slab", serif;
+  font-size: 3.2rem;
+  font-weight: medium;
   color: white;
   position: absolute;
-  margin: 10rem 30rem;
-  z-index: 1;
+  top: 10rem;
+  left: 45%;
+  z-index: 2;
+  padding: 0.8rem 2rem;
+}
+
+h1 a {
+  color: white;
+  text-decoration: none;
 }
 
 mat-toolbar a {
