--- a/src/app/modules/statistiques/statistiques.component.html
+++ b/src/app/modules/statistiques/statistiques.component.html
@@ -1,77 +1,107 @@
-<h2>Statistiques</h2>
+<h1>Statistiques</h1>
 
-<mat-form-field appearance="outline">
-  <mat-label>Filter by name</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input />
-</mat-form-field>
 <mat-form [formGroup]="criteresForm">
-  <!-- Critère de sexe -->
-  <label for="all"
-    >Tous
-    <input type="radio" name="sex" value="all" formControlName="sex" />
-  </label>
-  <label for="female">
-    Femme <input type="radio" name="sex" value="female" formControlName="sex" />
-  </label>
-  <label for="male">
-    Homme
-    <input type="radio" name="sex" value="male" formControlName="sex" />
-  </label>
+  <fieldset>
+    <legend>Filtres</legend>
+    <div>
+      <!-- Filtre par nom -->
+      <mat-form-field appearance="outline">
+        <mat-label>Filter by name</mat-label>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          placeholder="Name"
+          #input
+        />
+      </mat-form-field>
 
-  <!-- Critère d'âge -->
-  <mat-label>Fourchette d'âge</mat-label>
-  <mat-slider min="0" max="100">
-    <input
-      name="age"
-      title="ageMin"
-      value="0"
-      matSliderStartThumb
-      formControlName="ageMin"
-    />
-    <input
-      name="age"
-      title="ageMax"
-      value="100"
-      matSliderEndThumb
-      formControlName="ageMax"
-    />
-  </mat-slider>
+      <!-- Critère de sexe -->
+      <div>
+        <h3>Critères de sexe</h3>
+        <div>
+          <label for="all"
+            >Tous
+            <input type="radio" name="sex" value="all" formControlName="sex" />
+          </label>
+          <label for="female">
+            Femme
+            <input
+              type="radio"
+              name="sex"
+              value="female"
+              formControlName="sex"
+            />
+          </label>
+          <label for="male">
+            Homme
+            <input type="radio" name="sex" value="male" formControlName="sex" />
+          </label>
+        </div>
+      </div>
 
-  <!-- Critère survivant -->
-  <label for="all"
-    >Tous
-    <input
-      type="radio"
-      name="survived"
-      value="all"
-      formControlName="survived"
-    />
-  </label>
-  <label for="survivant"
-    >Survivant.e
-    <input
-      type="radio"
-      name="survived"
-      value="survivant"
-      formControlName="survived"
-    />
-  </label>
-  <label for="mort">
-    Mort.e
-    <input
-      type="radio"
-      name="survived"
-      value="mort"
-      formControlName="survived"
-    />
-  </label>
+      <!-- Critère d'âge -->
+      <div>
+        <h3>Fourchette d'âge</h3>
+        <mat-slider min="0" max="100"  step="1" showTickMarks discrete>
+          <input
+            name="age"
+            title="ageMin"
+            value="0"
+            matSliderStartThumb
+            formControlName="ageMin"
+          />
+          <input
+            name="age"
+            title="ageMax"
+            value="100"
+            matSliderEndThumb
+            formControlName="ageMax"
+          />
+        </mat-slider>
+      </div>
+
+      <!-- Critère survivant -->
+      <div>
+        <h3>Critère survivant</h3>
+        <div>
+          <label for="all"
+            >Tous
+            <input
+              type="radio"
+              name="survived"
+              value="all"
+              formControlName="survived"
+            />
+          </label>
+          <label for="survivant"
+            >Survivant.e
+            <input
+              type="radio"
+              name="survived"
+              value="survivant"
+              formControlName="survived"
+            />
+          </label>
+          <label for="mort">
+            Mort.e
+            <input
+              type="radio"
+              name="survived"
+              value="mort"
+              formControlName="survived"
+            />
+          </label>
+        </div>
+      </div>
+    </div>
+  </fieldset>
 </mat-form>
 
 <mat-table [dataSource]="passengersTab">
   <ng-container matColumnDef="Nom">
     <th mat-header-cell *matHeaderCellDef>Nom</th>
     <td mat-cell *matCellDef="let passenger">
-      <a [routerLink]="['./', passenger.PassengerId]">{{ passenger.Name }}</a>
+      <a [routerLink]="['../passengers', passenger.PassengerId]" routerLinkActive>{{ passenger.Name }}</a>
     </td>
   </ng-container>
   <ng-container matColumnDef="Sexe">
